# softcut

./: CMakeLists.txt  Commands.cpp  Commands.h  Interpolate.h  JackWrapper.cpp  Lowpass_butter_6.h  OscInterface.h  PaWrapper.cpp  PaWrapper.h  Platform.h  README.md  Resampler.cpp  Resampler.h  SoftCut.cpp  SoftCutHeadLogic.cpp  SoftCutHeadLogic.h  SubHead.cpp  SubHead.h  main.cpp  softcut-main.cpp  test-osc-more.scd  test-osc.scd
client/: client-main.cpp
faust/: LowpassBrickwall-template.h  LowpassBrickwall.dsp  build.sh
matlab/: brickwall-8.fda  brickwall_butter8.m  hermite.m  recprefade-linear-bump.tif  resampler.m  spectrogram.m  spectrum.m  stft.m  test-rec-pre-fade.m  test-varispeed.m  test_brickwall.m  test_downsample.m  test_output.m  test_phase_idx.m  test_rec_pre_fade_2.m  test_resample_audio.m  test_softclip.m  test_upsample.m  test_varispeed.m  test_varispeed_audio_out.m  test_varispeed_sine.m  tsq_clip.m  tsq_coeff.m  varispeed-waterfall-cpp.tif  varispeed-waterfall-matlab.tif  varispeed-waves.tif  varispeed_waterfall.m  varispeed_waterfall.mlx
resampler-test/: resampler-test-main.cpp
src/: Commands.cpp  Commands.h  FadeCurves.cpp  FadeCurves.h  Interpolate.h  JackWrapper.cpp  JackWrapper.h  LowpassBrickwall.h  OscInterface.cpp  OscInterface.h  PaWrapper.cpp  PaWrapper.h  Platform.h  Resampler.cpp  Resampler.h  SoftCut.cpp  SoftCut.h  SoftCutHead.cpp  SoftCutHead.h  SoftCutHeadLogic.cpp  SoftCutHeadLogic.h  SoftCutVoice.cpp  SoftCutVoice.h  SubHead.cpp  SubHead.h  Svf.cpp  Svf.h  TestBuffers.h  Types.h  Utilities.h  softcut-main.cpp
src/resampler-test/: resampler-test-main.cpp
